# cont_exchange_v2

./: .gitignore  .llmignore  CLAUDE.md  CMakeLists.txt  Development.md  Makefile  Makefile.docs  README.md  repo-tree.txt  ЭТАПЫ.md
contracts/: CMakeLists.txt
contracts/proto/fob/agent/v1/: agent.proto
contracts/proto/fob/common/v1/: common.proto
contracts/proto/fob/execution/v1/: execution.proto
contracts/proto/fob/ledger/v1/: ledger.proto
contracts/proto/fob/marketdata/v1/: bbo.proto  marketdata_raw.proto  marketdata_service.proto
contracts/proto/fob/matching/v1/: batch.proto  batch_outputs.proto  fill_event.proto  solver.proto
contracts/proto/fob/observability/v1/: observability.proto
contracts/proto/fob/orders/v1/: order_flow_service.proto  orders.proto
contracts/proto/fob/risk/v1/: risk.proto
contracts/proto/fob/venue/v1/: venue.proto
cpp/common/: CMakeLists.txt
cpp/common/include/cex/common/: decimal.hpp  defer.hpp  env.hpp  kafka.hpp  log.hpp  proto.hpp  replay_kafka.hpp  time.hpp  uuid.hpp
cpp/common/src/: decimal.cpp  env.cpp  kafka.cpp  log.cpp  proto.cpp  replay_kafka.cpp  time.cpp  uuid.cpp
cpp/gateway/: CMakeLists.txt
cpp/gateway/src/: main.cpp
cpp/gateway/src/infra/: order_flow_client.cpp  order_flow_client.hpp
cpp/gateway/src/transport/: http_gateway.cpp  http_gateway.hpp
cpp/ledger/: CMakeLists.txt
cpp/ledger/src/: main.cpp
cpp/ledger/src/app/: ledger_uc.cpp  ledger_uc.hpp
cpp/ledger/src/infra/: kafka_consumers.cpp  kafka_consumers.hpp
cpp/ledger/src/transport/: grpc_ledger_service.cpp  grpc_ledger_service.hpp
cpp/market_data/: CMakeLists.txt
cpp/market_data/src/: main.cpp
cpp/market_data/src/app/: market_data_uc.cpp  market_data_uc.hpp
cpp/market_data/src/infra/: kafka_consumer.cpp  kafka_consumer.hpp
cpp/market_data/src/transport/: grpc_market_data_service.cpp  grpc_market_data_service.hpp
cpp/matching/: CMakeLists.txt
cpp/matching/src/: main.cpp
cpp/matching/src/app/: execution_intent_builder.cpp  execution_intent_builder.hpp  external_venue_filter.cpp  external_venue_filter.hpp  hedge_execution_intents_publisher.cpp  hedge_execution_intents_publisher.hpp  hedge_trigger_policy.cpp  hedge_trigger_policy.hpp  matching_loop.cpp  matching_loop.hpp  planner_inputs_cache.cpp  planner_inputs_cache.hpp  position_snapshot_calculator.cpp  position_snapshot_calculator.hpp  run_batch_uc.cpp  run_batch_uc.hpp  solver_metrics.cpp  solver_metrics.hpp
cpp/matching/src/domain/: batch_result_to_fill_events.cpp  batch_result_to_fill_events.hpp  fill_math.hpp  flow_order.hpp  flow_order_repository.hpp  order_fill_delta.hpp  simulated_solver.cpp  simulated_solver.hpp  solver.hpp  solver_config.hpp  solver_config_ports.hpp  solver_impl.cpp  solver_impl.hpp
cpp/matching/src/infra/kafka/: batch_outputs_producer.cpp  batch_outputs_producer.hpp  execution_intents_producer.cpp  execution_intents_producer.hpp
cpp/matching/src/infra/market_data/: market_data_client.cpp  market_data_client.hpp
cpp/matching/src/infra/postgres/: decimal_conversion.cpp  decimal_conversion.hpp  postgres_flow_order_repository.cpp  postgres_flow_order_repository.hpp  postgres_solver_config_repository.cpp  postgres_solver_config_repository.hpp
cpp/matching/src/transport/: .grpc_isolation_matching_service.cpp.swp  grpc_isolation_matching_service.cpp  grpc_isolation_matching_service.hpp
cpp/matching/tests/app/: execution_intent_builder_test.cpp  external_venue_filter_test.cpp  hedge_trigger_policy_test.cpp  planner_inputs_cache_test.cpp  position_snapshot_calculator_test.cpp  run_batch_uc_test.cpp
cpp/matching/tests/domain/: .br_to_fe_test.cpp.swp  br_to_fe_test.cpp  f04_full_cycle_test.cpp  f04_sla_test.cpp  f04_solver_u1_u10_test.cpp  fill_math_test.cpp  simulated_solver_test.cpp
cpp/observability/: CMakeLists.txt
cpp/observability/src/: main.cpp
cpp/observability/src/app/: obs_loop.cpp  obs_loop.hpp
cpp/order_flow/: CMakeLists.txt
cpp/order_flow/src/: main.cpp
cpp/order_flow/src/app/: order_flow_uc.cpp  order_flow_uc.hpp
cpp/order_flow/src/infra/: ledger_client.cpp  ledger_client.hpp  orders_kafka_publisher.cpp  orders_kafka_publisher.hpp  risk_client.cpp  risk_client.hpp
cpp/order_flow/src/transport/: grpc_order_flow_service.cpp  grpc_order_flow_service.hpp
cpp/risk/: CMakeLists.txt
cpp/risk/src/: main.cpp
cpp/risk/src/app/: risk_uc.cpp  risk_uc.hpp
cpp/risk/src/infra/: risk_alerts_publisher.cpp  risk_alerts_publisher.hpp
cpp/risk/src/transport/: grpc_risk_service.cpp  grpc_risk_service.hpp
cpp/venues/: CMakeLists.txt
cpp/venues/src/: main.cpp
cpp/venues/src/app/: venues_loop.cpp  venues_loop.hpp
legacy_mvp/matching_engine/: .env-example  CMakeLists.txt  Dockerfile  main.cpp
legacy_mvp/matching_engine/internal/contracts/: backend_client.hpp  cancel_queue_usecase.hpp  exchange_connector_client.hpp  exchange_connector_usecase.hpp  fill_details_repo.hpp  get_ask_curve_use_case.hpp  get_bid_curve_use_case.hpp  get_clearing_price_use_case.hpp  order_book_configuration_usecase.hpp  order_book_repo.hpp  order_book_usecase.hpp  order_queue_usecase.hpp  order_translator_usecase.hpp  order_updates_sender.hpp  price_calc.hpp  user_order_book_repo.hpp  user_order_book_usecase.hpp
legacy_mvp/matching_engine/internal/domain/: asset.hpp  config.hpp  continuous_order.hpp  curve_fracture.hpp  env_loader.hpp  fill_details.hpp  limit_exchange_order.hpp  matched_details.hpp  trading_pair.hpp
legacy_mvp/matching_engine/internal/pkg/: CMakeLists.txt
legacy_mvp/matching_engine/internal/pkg/app/: CMakeLists.txt  matching_engine.cpp  matching_engine.hpp
legacy_mvp/matching_engine/internal/pkg/repository/: CMakeLists.txt
legacy_mvp/matching_engine/internal/pkg/transport/: CMakeLists.txt
legacy_mvp/matching_engine/internal/usecases/: CMakeLists.txt
legacy_mvp/matching_engine/internal/usecases/cancel_queue/: cancel_queue.cpp  cancel_queue.hpp
legacy_mvp/matching_engine/internal/usecases/engine_manager/: engine_manager.cpp  engine_manager.hpp
legacy_mvp/matching_engine/internal/usecases/get_ask_curve/: get_ask_curve.cpp  (+1 more)
(+693 files in other folders)
